--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,14 @@ plugins {
     id 'java'
 }
 
+//project.ext.lwjglVersion = "3.3.4"
+//project.ext.lwjglNatives = "natives-windows"
+
+
 repositories {
     mavenCentral()
+//    maven { url "https://oss.sonatype.org/content/repositories/" }
+//    maven { url "https://packages.jetbrains.team/maven/p/ij/intellij-dependencies/" }
 }
 
 dependencies {
@@ -12,4 +18,22 @@ dependencies {
 
     // https://mvnrepository.com/artifact/org.antlr/antlr4
     implementation group: 'org.antlr', name: 'antlr4', version: '4.13.2'
+
+//    implementation "org.bytedeco:llvm-platform:18.1.8-1.5.11-SNAPSHOT"
+    // https://mvnrepository.com/artifact/org.bytedeco/llvm-platform
+//    implementation group: 'org.bytedeco', name: 'llvm-platform', version: '17.0.6-1.5.10'
+    implementation group: 'org.bytedeco', name: 'llvm-platform', version: '8.0.0-1.5.1'
+
+
+//    implementation platform("org.lwjgl:lwjgl-bom:$lwjglVersion")
+//
+//    implementation "org.lwjgl:lwjgl"
+//    implementation "org.lwjgl:lwjgl-llvm"
+//    runtimeOnly "org.lwjgl:lwjgl::$lwjglNatives"
+//    runtimeOnly "org.lwjgl:lwjgl-llvm::$lwjglNatives"
+//    // https://mvnrepository.com/artifact/org.jetbrains.intellij.deps/org-llvm-llvmc
+//    implementation group: 'org.jetbrains.intellij.deps', name: 'org-llvm-llvmc', version: '3.9'
+//    // https://mvnrepository.com/artifact/org.jetbrains.intellij.deps/org-llvm-ir
+//    implementation group: 'org.jetbrains.intellij.deps', name: 'org-llvm-ir', version: '3.9'
+//    implementation group: 'org.jetbrains.intellij.deps', name: 'org-llvm-adtsupport', version: '3.9'
 }
