--- a/RlxRuntime/RlxRuntime.vcxproj
+++ b/RlxRuntime/RlxRuntime.vcxproj
@@ -174,12 +174,14 @@
     <ClCompile Include="RlxRt.c" />
     <ClCompile Include="set.c" />
     <ClCompile Include="intrinsics.c" />
+    <ClCompile Include="allocator.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="RlxRt.h" />
     <ClInclude Include="set.h" />
     <ClInclude Include="rtset.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="allocator.h" />
     <ClInclude Include="intrinsics.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
