--- a/RlxRuntime/RlxRuntime.vcxproj.filters
+++ b/RlxRuntime/RlxRuntime.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="intrinsics.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="allocator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="RlxRt.h">
@@ -30,6 +33,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="pch.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="allocator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
