tweaks to rlxrt, start work on minicrt, I think gc stuff is done, need to setup static stuff, basic field support, cache pointer types, class object instances, dump final ll to disk, realize vcruntime works as an alternative to basically everything (or includes basically everything)

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,9 @@
 # execution outputs
 /*.obj
 /*.exe
+/*.ll
 /module.lib
+/module.pdb
 /dmp/
 
 # subproject ide files
@@ -23,6 +25,7 @@
 # subproject build files
 /*/Release/
 /*/Debug/
+/MiniCRT/test/
 /*/x64/
 /*/build/
 /.semanticgraphs/
